# become_engineer

./: .gitignore  404.html  README.md  index.html  mkdocs.samples-b.yml  mkdocs.samples-c.yml  mkdocs.samples-unified.yml  mkdocs.samples.yml  mkdocs.yml  requirements-ci.txt  sitemap.xml
content-inbox/: README.md  ai-foundation.md  cs-core.md  engineering-foundation.md  external-source-catalog.md  index.html  llm-agent.md  programming-languages.md  web-fullstack.md
docs/: 00_overview.md  01_prd.md  02_roadmap.md  03_architecture.md  04_acceptance_checklist.md  05_ai_coding_agent_guide.md  06_progress.md  07_decisions.md  08_content_standard.md  09_learning_experience_frontend_plan.md  10_course_content_revision_plan.md  11_course_migration_ledger.md
examples/cpp-core/cmake-minimal/: CMakeLists.txt
examples/cpp-core/cmake-minimal/include/study/: study_status.hpp
examples/cpp-core/cmake-minimal/tests/: study_status_tests.cpp
exercises/: README.md  index.html
exercises/cs-core/traceable-array-lab/cpp/: CMakeLists.txt
exercises/cs-core/traceable-array-lab/cpp/include/traceable_array_lab/: lab.hpp
exercises/cs-core/traceable-array-lab/cpp/src/: lab.cpp  main.cpp
exercises/cs-core/traceable-array-lab/cpp/tests/: test_lab.cpp
exercises/cs-core/traceable-array-lab/python/: .gitignore  pyproject.toml
exercises/cs-core/traceable-array-lab/python/src/traceable_array_lab/: __init__.py  __main__.py  lab.py  reporting.py
exercises/cs-core/traceable-array-lab/python/tests/: test_lab.py  test_reporting.py
exercises/cs-core/traceable-graph-traversal-lab/cpp/: CMakeLists.txt
exercises/cs-core/traceable-graph-traversal-lab/cpp/include/traceable_graph_traversal_lab/: lab.hpp
exercises/cs-core/traceable-graph-traversal-lab/cpp/src/: lab.cpp  main.cpp
exercises/cs-core/traceable-graph-traversal-lab/cpp/tests/: test_lab.cpp
exercises/cs-core/traceable-graph-traversal-lab/python/: pyproject.toml
exercises/cs-core/traceable-graph-traversal-lab/python/src/traceable_graph_traversal_lab/: __init__.py  __main__.py  graph.py  reporting.py  traversal.py
exercises/cs-core/traceable-graph-traversal-lab/python/tests/: test_bfs.py  test_dfs.py  test_graph.py  test_reporting.py
exercises/cs-core/traceable-hash-lab/cpp/: CMakeLists.txt
exercises/cs-core/traceable-hash-lab/cpp/include/traceable_hash_lab/: hashing.hpp
exercises/cs-core/traceable-hash-lab/cpp/src/: hashing.cpp  main.cpp
exercises/cs-core/traceable-hash-lab/cpp/tests/: test_hashing.cpp
exercises/cs-core/traceable-linear-structures-lab/cpp/: CMakeLists.txt
exercises/cs-core/traceable-linear-structures-lab/cpp/include/traceable_linear_structures_lab/: structures.hpp
exercises/cs-core/traceable-linear-structures-lab/cpp/src/: main.cpp  structures.cpp
exercises/cs-core/traceable-linear-structures-lab/cpp/tests/: test_structures.cpp
exercises/cs-core/traceable-linear-structures-lab/python/: pyproject.toml
exercises/cs-core/traceable-linear-structures-lab/python/src/traceable_linear_structures_lab/: __init__.py  __main__.py  reporting.py  structures.py
exercises/cs-core/traceable-linear-structures-lab/python/tests/: test_reporting.py  test_structures.py
exercises/cs-core/traceable-search-sort-lab/cpp/: CMakeLists.txt
exercises/cs-core/traceable-search-sort-lab/cpp/include/traceable_search_sort_lab/: lab.hpp
exercises/cs-core/traceable-search-sort-lab/cpp/src/: lab.cpp  main.cpp
exercises/cs-core/traceable-search-sort-lab/cpp/tests/: test_lab.cpp
exercises/cs-core/traceable-spanning-forest-lab/cpp/: CMakeLists.txt
exercises/cs-core/traceable-spanning-forest-lab/cpp/include/traceable_spanning_forest_lab/: lab.hpp
exercises/cs-core/traceable-spanning-forest-lab/cpp/src/: lab.cpp  main.cpp
exercises/cs-core/traceable-spanning-forest-lab/cpp/tests/: test_lab.cpp
exercises/cs-core/traceable-spanning-forest-lab/python/: pyproject.toml
exercises/cs-core/traceable-spanning-forest-lab/python/src/traceable_spanning_forest_lab/: __init__.py  __main__.py  dsu.py  forest.py  reporting.py
exercises/cs-core/traceable-spanning-forest-lab/python/tests/: test_lab.py
exercises/programming-languages/study-progress-reporters/cpp/: CMakeLists.txt
exercises/programming-languages/study-progress-reporters/cpp/include/study/: study_report.hpp
exercises/programming-languages/study-progress-reporters/cpp/src/: main.cpp  study_report.cpp
exercises/programming-languages/study-progress-reporters/cpp/tests/: study_report_tests.cpp
exercises/programming-languages/study-progress-reporters/python/: README.md  analysis.py  config.example.toml  fixtures.py  instrumentation.py  main.py  models.py  pyproject.toml  reporting.py  resources.py
exercises/programming-languages/study-progress-reporters/python/src/study_progress_reporter/: __init__.py  __main__.py  analysis.py  cli.py  config.py  fixtures.py  instrumentation.py  logging_setup.py  models.py  reporting.py  resources.py
exercises/programming-languages/study-progress-reporters/python/tests/: test_cli_config.py  test_reporter.py
javascripts/: cs-trace.js  personalization-core.js  tutor-search.js  tutor.js
learning-paths/: README.md  beginner-roadmap.md  curriculum-map.md  index.html
maps/: README.md  become-engineer-map.md  index.html  python-ai-llm-content-coverage.md  python-ai-llm-dependency-map.md
notes/: README.md  index.html
projects/: README.md  index.html  project-roadmap.md
publications/: README.md  index.html
resources/: README.md  index.html
reviews/: README.md  index.html
scripts/: check_site_links.cjs  generate_ai_math_data_01_tutor.mjs  generate_ai_math_data_02_tutor.mjs  generate_ai_math_data_03_tutor.mjs  generate_ai_math_data_04_tutor.mjs  generate_ai_math_data_05_tutor.mjs  generate_ai_math_data_06_tutor.mjs  generate_algorithm_deepening_01_tutor.mjs  generate_algorithm_deepening_02_tutor.mjs  generate_algorithm_deepening_03_tutor.mjs  generate_algorithm_deepening_04_tutor.mjs  generate_algorithm_deepening_05_tutor.mjs  generate_algorithm_deepening_06_tutor.mjs  generate_algorithm_deepening_07_tutor.mjs  (+146 more)
(+1088 files in other folders)
