[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceable-array-lab"
version = "0.1.0"
description = "A deterministic Python and C++ array complexity lab for Become Engineer."
readme = { text = "Python implementation of the Become Engineer traceable array lab.", content-type = "text/plain" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
