[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceable-graph-traversal-lab"
version = "0.1.0"
description = "Deterministic undirected-graph representation and traversal lab for Become Engineer."
readme = { text = "Python implementation of the Become Engineer traceable graph traversal lab.", content-type = "text/plain" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.10", "build>=1.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
