[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceable-linear-structures-lab"
version = "0.1.0"
description = "Deterministic linked-list, stack, and queue lab for Become Engineer."
readme = { text = "Python implementation of the Become Engineer traceable linear structures lab.", content-type = "text/plain" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.10", "build>=1.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
