[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "study-progress-reporter"
version = "0.1.0"
description = "A standard-library study progress reporting CLI used by Become Engineer courses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
]

[project.scripts]
study-progress = "study_progress_reporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true

